# aggregato

./: .gitignore  CHANGES.md  LICENSE  README.md  demo.sh
circuits/aggregator/: Nargo.toml  Prover.toml
circuits/aggregator/src/: main.nr
circuits/inner/: Prover.toml
circuits/inner/src/: main.nr
contracts/aggregato_verifier/: Cargo.toml  rust-toolchain.toml
contracts/aggregato_verifier/src/: lib.rs
demo_data/: txs_16.json  txs_32.json  txs_64.json
frontend/: index.html  package-lock.json  package.json  run.html  tailwind.config.js  vite.config.ts
frontend/public/: landing.css
frontend/scripts/: README.md  check_pallets.mjs  deploy_contract.mjs
frontend/src/: App.tsx  constants.ts  dataset.ts  hooks.ts  index.css  types.ts  util.ts  wallet.test.ts  wallet.ts
frontend/src/components/: Dataset.tsx  Header.tsx  Metrics.tsx  Pipeline.tsx  StatusStrip.tsx  Terminal.tsx  Verification.tsx  common.tsx
orchestrator/: Cargo.toml
orchestrator/src/: main.rs
