[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"
default-run = "orchestrator"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
rayon = "1"
schnorrkel = "0.11"
hex = "0.4"
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
